client-code/src/app/dashboard/episodes/episode-app/episode-app.component.less
.container{
    display: flex;
    flex-direction: row;
    width: 3000px;
    overflow-x: scroll;

    .episodeDiv {
      width: auto;
      overflow: hidden;
      margin-left: 10px;
    }
}

.cdk-drag-preview {
    box-sizing: border-box;
    border-radius: 4px;
    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
                0 8px 10px 1px rgba(0, 0, 0, 0.14),
                0 3px 14px 2px rgba(0, 0, 0, 0.12);
  }
  
  .cdk-drag-placeholder {
    opacity: 0;
  }
  
  .cdk-drag-animating {
    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
  }
  
  .example-box:last-child {
    border: none;
  }
  
  .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
  }

  .hidden{
      display: none;
  }

  .showDetails{
      display: block;
  }

